# pallets

./: Cargo.toml
balances/: Cargo.toml
bazaar/: Cargo.toml
bazaar/src/: tests.rs
ceremonies/: Cargo.toml
ceremonies/src/: tests.rs
communities/: Cargo.toml
communities/src/: tests.rs
personhood-oracle/: Cargo.toml
primitives/: Cargo.toml
scheduler/: Cargo.toml
scheduler/src/: tests.rs
sybil-gate-template/: Cargo.toml
sybil-gate-template/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
xc-transfer/: Cargo.toml
xc-transfer/src/: lib.rs
