[package]
name = "pallet-encointer-xc-transfer"
version = "0.3.9"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"


[dependencies]
[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.6"

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.frame-system]
default-features = false
package = "frame-system"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.frame-support]
default-features = false
package = "frame-support"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-core]
default-features = false
package = "sp-core"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-runtime]
default-features = false
package = "sp-runtime"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.polkadot-parachain]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "master"

[dependencies.xcm]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "master"

[dependencies.sp-io]
default-features = false
package = "sp-io"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.xcm-executor]
default-features = false
git = "https://github.com/paritytech/polkadot.git"
branch = "master"

cumulus-primitives = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "rstd/std",
    "sp-io/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "xcm/std",
    "xcm-executor/std",
]