[package]
name = "pallet-encointer-xc-transfer"
version = "0.3.9"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"


[dependencies]
[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.6"

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
branch = "rococo-v1"

[dependencies.frame-system]
default-features = false
package = "frame-system"
git = "https://github.com/paritytech/substrate.git"
branch = "rococo-v1"

[dependencies.frame-support]
default-features = false
package = "frame-support"
git = "https://github.com/paritytech/substrate.git"
branch = "rococo-v1"

[dependencies.sp-core]
default-features = false
package = "sp-core"
git = "https://github.com/paritytech/substrate.git"
branch = "rococo-v1"

[dependencies.sp-runtime]
default-features = false
package = "sp-runtime"
git = "https://github.com/paritytech/substrate.git"
branch = "rococo-v1"

[dependencies.polkadot-parachain]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "rococo-v1"

[dependencies.xcm]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "rococo-v1"

[dependencies.sp-io]
default-features = false
package = "sp-io"
git = "https://github.com/paritytech/substrate.git"
branch = "rococo-v1"

[dependencies.xcm-executor]
default-features = false
git = "https://github.com/paritytech/polkadot.git"
branch = "rococo-v1"

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "rstd/std",
    "sp-io/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "xcm/std",
    "xcm-executor/std",
    "polkadot-parachain/std"
]